--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,6 +26,7 @@
 @import "blocks/sitemap";
 @import "blocks/header";
 @import "blocks/main-block";
+@import "blocks/hall";
 
 // ---------------------------------
 
