main-block hall fix

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,6 +27,7 @@
 @import "blocks/header";
 @import "blocks/main-block";
 @import "blocks/hall";
+@import "blocks/play-video";
 
 // ---------------------------------
 
