--- a/source/sass/blocks/main-block.scss
+++ b/source/sass/blocks/main-block.scss
@@ -28,7 +28,7 @@
   }
 }
 
-.main-block__desckription {
+.main-block__description {
   display: flex;
   flex-direction: column;
   max-width: 395px;
@@ -49,7 +49,7 @@
   }
 }
 
-.main-block__desckription-container {
+.main-block__description-container {
   display: flex;
 }
 
@@ -96,7 +96,7 @@
   }
 }
 
-.main-text__list {
+.main-block__list {
   text-align: right;
   max-width: 50%;
   flex-basis: 50%;
@@ -114,7 +114,7 @@
   }
 }
 
-.main-text__item {
+.main-block__item {
   font-family: $ff-text;
   color: $color-default-white;
   font-size: 14px;
@@ -122,6 +122,19 @@
   font-weight: 400;
   display: block;
   text-align: right;
+}
+
+.main-block__btn {
+  width: 232px;
+
+  @include vp-1199 {
+    padding: 20px 28px;
+    width: 185px;
+  }
+
+  @include vp-767 {
+    width: 100%;
+  }
 }
 
 .main-block__image {
