--- a/source/sass/blocks/hall.scss
+++ b/source/sass/blocks/hall.scss
@@ -17,12 +17,14 @@
 }
 
 .hall h2 {
+  font-size: 48px;
+
   @include vp-1199 {
-    padding-right: 14px;
+    font-size: 42px;
   }
 
   @include vp-767 {
-    padding-right: 0;
+    font-size: 32px;
   }
 }
 
