--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,7 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+
 // Swiper 7.4.1
 // @import "vendor/swiper";
 
@@ -19,7 +20,6 @@
 // ---------------------------------
 
 @import "blocks/btn";
-@import "blocks/modal";
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
@@ -28,6 +28,12 @@
 @import "blocks/main-block";
 @import "blocks/hall";
 @import "blocks/play-video";
+@import "blocks/tickets";
+@import "blocks/ticket";
+@import "blocks/tabs";
+@import "blocks/data-tabs.scss";
+@import "blocks/price.scss";
+@import "blocks/super.scss";
 
 // ---------------------------------
 
