--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -19,7 +19,10 @@ $color-black-russian:               #030a1a;
 $color-venetian-red:                #b80027;
 $color-crimson:                     #d10a42;
 $color-torchred:                    #ed0233;
+$color-ghost-white:                 #f8f9fc;
+$color-whisper:                     #e8e8e8;
 $color-dark-gray:                   #afafaf;
+$color-gray:                        #787878;
 $color-chambray:                    #495a7d;
 
 // Gradient
