--- a/source/sass/blocks/tickets.scss
+++ b/source/sass/blocks/tickets.scss
@@ -6,11 +6,11 @@
 
   &::before {
     position: absolute;
-    bottom: 0;
+    bottom: -31px;
     right: -34px;
     content: '';
     width: 321px;
-    height: 384px;
+    height: 413px;
     background-image: url(./../img/pancakes.jpg);
 
     @include vp-1199 {
