--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,7 +33,7 @@
 @import "blocks/tabs";
 @import "blocks/data-tabs.scss";
 @import "blocks/price.scss";
-@import "blocks/super.scss";
+@import "blocks/promo.scss";
 
 // ---------------------------------
 
