--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,7 +4,7 @@
 @import "vendor/normalize";
 
 // Swiper 7.4.1
-// @import "vendor/swiper";
+@import "vendor/swiper";
 
 // Global
 // ---------------------------------
@@ -34,6 +34,9 @@
 @import "blocks/data-tabs.scss";
 @import "blocks/price.scss";
 @import "blocks/promo.scss";
+@import "blocks/date.scss";
+@import "blocks/time.scss";
+@import "blocks/coaches.scss";
 
 // ---------------------------------
 
