--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -38,6 +38,10 @@
       gap: 0 35px;
     }
 
+    @media (min-width: 860px) and (max-width: 1199px) {
+      grid-template-rows: 0.5fr 1fr 1fr 1fr;
+    }
+
     @include vp-767 {
       max-width: 100%;
       padding-bottom: 35px;
@@ -115,112 +119,3 @@
   height: 100%;
   width: 100%;
 }
-
-.date {
-  color: $color-default-white;
-  display: grid;
-  grid-template-columns: 0.3fr 0.3fr;
-  grid-template-rows: 0.1fr 0.2fr 0.2fr;
-  gap: 0 8px;
-  grid-template-areas:
-    "date date"
-    "day month"
-    "day year";
-  grid-area: promo-date;
-  align-items: center;
-
-  @include vp-1199 {
-    margin-top: -5px;
-    gap: 0 5px;
-  }
-
-  @include vp-767 {
-    max-width: 100px;
-  }
-}
-
-.date__title {
-  font-size: 18px;
-  line-height: 27px;
-  font-weight: 400;
-  border-bottom: 1px $color-default-white solid;
-  grid-area: date;
-
-  @include vp-1199 {
-    font-size: 12px;
-    line-height: 18px;
-  }
-}
-
-.date__day {
-  font-size: 40px;
-  line-height: 60px;
-  font-weight: 700;
-  grid-area: day;
-
-  @include vp-1199 {
-    font-size: 24px;
-    line-height: 36px;
-  }
-}
-
-.date__month,
-.date__year {
-  font-size: 14px;
-  line-height: 21px;
-  font-weight: 400;
-
-  @include vp-1199 {
-    font-size: 10px;
-    line-height: 15px;
-  }
-}
-
-.date__month {
-  grid-area: month;
-}
-
-.date__year {
-  grid-area: year;
-}
-
-.time {
-  color: $color-default-white;
-  display: grid;
-  grid-template-rows: 0.2fr 0.3fr;
-  grid-template-columns: 0.5fr;
-  grid-area: promo-time;
-
-  @include vp-1199 {
-    margin-top: -5px;
-  }
-
-  @include vp-767 {
-    margin-top: -4px;
-    max-width: 125px;
-  }
-}
-
-.time__title {
-  font-size: 18px;
-  line-height: 27px;
-  font-weight: 400;
-  border-bottom: 1px $color-default-white solid;
-
-  @include vp-1199 {
-    font-size: 12px;
-    line-height: 18px;
-  }
-}
-
-.time__watch {
-  font-size: 40px;
-  line-height: 59px;
-  font-weight: 700;
-
-  @include vp-1199 {
-    font-size: 24px;
-    line-height: 36px;
-  }
-}
-
