--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -1,4 +1,18 @@
 .coaches {
   display: block;
-  padding: 53px 0 140px 0;
+  padding: 58px 0 140px 0;
+
+  @include vp-1199 {
+    padding: 48px 0 140px 0;
+  }
+
+  @include vp-767 {
+    padding: 10px 0 140px 0;
+  }
+}
+
+.coaches h2 {
+  @include vp-1199 {
+    text-align: center;
+  }
 }
