--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -24,11 +24,10 @@
   max-width: 500px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 0.5fr 0.5fr;
   gap: 0 63px;
   grid-template-areas:
-    "promo-title promo-date"
-    "promo-title promo-time"
+    "promo-title date"
     "promo-subtitle promo-subtitle"
     "btn btn";
 
@@ -36,10 +35,6 @@
       max-width: 292px;
       padding: 53px 50px 30px 50px;
       gap: 0 35px;
-    }
-
-    @media (min-width: 860px) and (max-width: 1199px) {
-      grid-template-rows: 0.5fr 1fr 1fr 1fr;
     }
 
     @include vp-767 {
@@ -63,6 +58,21 @@
     font-size: 48px;
     line-height: 46.08px;
     letter-spacing: 1.44px;
+  }
+}
+
+.promo__date {
+  grid-area: date;
+  display: flex;
+  flex-direction: column;
+  gap: 23px;
+
+  @include vp-1199 {
+    gap: 8px;
+  }
+
+  @include vp-767 {
+    gap: 7px;
   }
 }
 
@@ -90,7 +100,7 @@
   width: 103%;
   grid-area: btn;
   height: fit-content;
-  margin-top: -21px;
+  margin-top: -20px;
   margin-left: -10px;
   padding: 22px 53px;
 
