--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -91,6 +91,15 @@ h3 {
   }
 }
 
+h4 {
+  margin: 0;
+  color: $color-default-white;
+  font-family: $ff-text;
+  font-size: 18px;
+  line-height: 27px;
+  font-weight: 700;
+}
+
 a {
   color: $color-default-black;
   text-decoration: none;
