--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -37,6 +37,7 @@
 @import "blocks/date.scss";
 @import "blocks/time.scss";
 @import "blocks/coaches.scss";
+@import "blocks/coach.scss";
 
 // ---------------------------------
 
