--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -22,6 +22,7 @@ $color-torchred:                    #ed0233;
 $color-ghost-white:                 #f8f9fc;
 $color-whisper:                     #e8e8e8;
 $color-dark-gray:                   #afafaf;
+$color-spindle:                     #b6bdcc;
 $color-gray:                        #787878;
 $color-chambray:                    #495a7d;
 
