--- a/source/sass/blocks/coach.scss
+++ b/source/sass/blocks/coach.scss
@@ -29,6 +29,10 @@
   }
 }
 
+.coach h4 {
+  margin-left: -7px;
+}
+
 .coach__foto,
 .coach__descpiption {
   position: absolute;
@@ -49,7 +53,7 @@
 
 .coach__descpiption {
   color: $color-default-white;
-  padding: 52px 45px 22px 43px;
+  padding: 52px 28px 22px 35px;
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
@@ -69,6 +73,7 @@
   text-align: center;
   margin-bottom: 30px;
   margin-top: -4px;
+  margin-left: -7px;
   opacity: 0;
 }
 
@@ -77,7 +82,7 @@
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
-  margin-left: 28px;
+  margin-left: 35px;
   opacity: 0;
 }
 
