--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,6 +38,8 @@
 @import "blocks/time.scss";
 @import "blocks/coaches.scss";
 @import "blocks/coach.scss";
+@import "blocks/advantages.scss";
+@import "blocks/advantage.scss";
 
 // ---------------------------------
 
