--- a/source/sass/blocks/coach.scss
+++ b/source/sass/blocks/coach.scss
@@ -84,6 +84,10 @@
   font-weight: 400;
   margin-left: 35px;
   opacity: 0;
+
+  @include vp-767 {
+    margin-left: 28px;
+  }
 }
 
 .coach__item {
