--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -1,13 +1,85 @@
 .advantage {
   display: flex;
   align-items: center;
-  gap: 30px;
-  max-width: 340px;
-  padding-bottom: 80px;
+  gap: 32px;
+  max-width: 356px;
+
+  @include vp-1199 {
+    gap: 31px;
+    max-width: 334px;
+    height: max-content;
+  }
+
+  @include vp-767 {
+    flex-direction: column;
+    padding: 0 15px;
+    gap: 0;
+    margin-bottom: 23px;
+  }
 }
 
 .advantage--border-bottom {
   border-bottom: 2px rgba(209, 10, 66, 0.2) solid;
+  padding-bottom: 75px;
+
+  @include vp-1199 {
+    border-bottom: none;
+    padding-bottom: 0;
+  }
+}
+
+.advantage--left {
+  padding-left: 32px;
+
+  @include vp-1199 {
+    padding-left: 0;
+    gap: 28px;
+  }
+
+  @include vp-767 {
+    padding-left: 15px;
+    gap: 0;
+  }
+}
+
+.advantage--right {
+  margin-left: 5px;
+
+  @include vp-1199 {
+    margin-left: 15px;
+  }
+
+  @include vp-767 {
+    margin-left: 0;
+  }
+}
+
+.advantage--top {
+  margin-top: -27px;
+
+  @include vp-767 {
+    margin-top: 0;
+  }
+}
+
+.advantage--bottom {
+  margin-top: 28px;
+  align-self: end;
+
+  @include vp-1199 {
+    margin-top: 22px;
+  }
+
+  @include vp-767 {
+    margin-top: 0;
+    align-self: center;
+  }
+}
+
+.advantage__indicator {
+  @include vp-767 {
+    margin-bottom: 26px;
+  }
 }
 
 .advantage__unit {
@@ -17,6 +89,15 @@
   background: linear-gradient(to bottom right, #D10A42 5%, #0041CA 61%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+
+  @include vp-1199 {
+    font-size: 58px;
+    line-height: 87px;
+  }
+
+  @include vp-767 {
+    text-align: center;
+  }
 }
 
 .advantage__lebel {
@@ -25,10 +106,24 @@
   line-height: 21px;
   font-weight: 400;
   margin-top: -22px;
+
+  @include vp-1199 {
+    margin-top: -18px;
+  }
+
+  @include vp-767 {
+    text-align: center;
+  }
 }
 
 .advantage__description {
   padding-top: 18px;
+
+  @include vp-767 {
+    text-align: center;
+    padding-top: 0;
+    margin-top: -20px;
+  }
 }
 
 .advantage__title {
@@ -36,11 +131,23 @@
   line-height: 33px;
   font-weight: 700;
   margin-bottom: 5px;
+
+  @include vp-1199 {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  @include vp-767 {
+    margin-bottom: 0;
+  }
 }
 
 .advantage__text {
   font-size: 16px;
   line-height: 22.4px;
   font-weight: 300;
-  margin-top: 9px;
+
+  @include vp-767 {
+    padding: 0 22px;
+  }
 }
