--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -40,6 +40,7 @@
 @import "blocks/coach.scss";
 @import "blocks/advantages.scss";
 @import "blocks/advantage.scss";
+@import "blocks/advantages-banner.scss";
 
 // ---------------------------------
 
