--- a/source/sass/blocks/tickets.scss
+++ b/source/sass/blocks/tickets.scss
@@ -7,9 +7,9 @@
   &::before {
     position: absolute;
     bottom: -31px;
-    right: -34px;
+    right: 0;
     content: '';
-    width: 321px;
+    width: 287px;
     height: 413px;
     background-image: url(./../img/pancakes.jpg);
 
