--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -41,6 +41,9 @@
 @import "blocks/advantages.scss";
 @import "blocks/advantage.scss";
 @import "blocks/advantages-banner.scss";
+@import "blocks/stocks.scss";
+@import "blocks/stocks-banner.scss";
+@import "blocks/stock.scss";
 
 // ---------------------------------
 
