--- a/source/sass/blocks/advantages-banner.scss
+++ b/source/sass/blocks/advantages-banner.scss
@@ -17,7 +17,8 @@
     padding: 18px 74px 42px;
     margin-top: 19px;
     margin-bottom: 26px;
-    max-width: 100%;
+    max-width: none;
+    width: 100%;
   }
 }
 
