--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -103,6 +103,11 @@ h4 {
 a {
   color: $color-default-black;
   text-decoration: none;
+  transition: opacity $trans-default;
+
+  &:hover {
+    opacity: 0.7;
+  }
 }
 
 ul {
