--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,12 +38,16 @@
 @import "blocks/time.scss";
 @import "blocks/coaches.scss";
 @import "blocks/coach.scss";
+@import "blocks/slider-coaches.scss";
 @import "blocks/advantages.scss";
 @import "blocks/advantage.scss";
 @import "blocks/advantages-banner.scss";
 @import "blocks/stocks.scss";
 @import "blocks/stocks-banner.scss";
 @import "blocks/stock.scss";
+@import "blocks/reviews.scss";
+@import "blocks/review.scss";
+@import "blocks/slider-reviews.scss";
 
 // ---------------------------------
 
