--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -48,6 +48,9 @@
 @import "blocks/reviews.scss";
 @import "blocks/review.scss";
 @import "blocks/slider-reviews.scss";
+@import "blocks/swiper-container.scss";
+@import "blocks/contacts.scss";
+@import "blocks/contacts-contacts.scss";
 
 // ---------------------------------
 
