--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -13,8 +13,13 @@
 
 .coaches h2 {
   margin-bottom: 52px;
-  
+
   @include vp-1199 {
     text-align: center;
+    margin-bottom: 31px;
+  }
+
+  @include vp-767 {
+    margin-bottom: 41px;
   }
 }
