--- a/source/sass/blocks/custom-input.scss
+++ b/source/sass/blocks/custom-input.scss
@@ -1,7 +1,6 @@
 .custom-input,
 .custom-textarea {
   position: relative;
-
   display: flex;
   width: 530px;
   padding: 14px 0 28px;
@@ -21,19 +20,26 @@
       flex-direction: column;
     }
 
+    input::placeholder {
+      color: $color-default-white;
+      font-size: 14px;
+      line-height: 16.41;
+      font-weight: 400;
+    }
+
     input,
     textarea {
       flex-grow: 1;
       max-width: 300px;
-      min-height: 48px;
+      min-height: 31px;
       margin-left: auto;
-      padding: 10px;
-
-      border: 2px solid rgba(#000000, 0.2);
-      border-radius: 5px;
+      padding: 5px 10px 8px 0;
+      border: 1px solid transparent;
+      border-bottom: 1px solid $color-light-slate-grey;
       outline: none;
-
       transition: border 0.3s ease;
+      background-color: transparent;
+      color: $color-default-white;
 
       @media screen and (max-width: 767px) {
         max-width: unset;
@@ -41,11 +47,11 @@
       }
 
       &:hover {
-        border: 2px solid rgba(#000000, 0.5);
+        opacity: 0.7;
       }
 
       &:focus {
-        border: 2px solid rgba(#000000, 0.8);
+        opacity: 0.7;
       }
     }
   }
@@ -60,11 +66,8 @@
     position: absolute;
     right: 0;
     bottom: 35px;
-
     color: #ff1553;
-
     opacity: 0;
-
     transition: opacity 0.3s ease;
 
     @media screen and (max-width: 767px) {
@@ -75,22 +78,22 @@
   &.is-invalid {
     input,
     textarea {
-      border: 2px solid #ff1553;
+      border: 1px solid #ff1553;
 
       &:focus,
       &:hover {
-        border: 2px solid rgba(#ff1553, 0.5);
+        border: 1px solid rgba(#ff1553, 0.5);
       }
     }
   }
 
   &.is-valid {
     input {
-      border: 2px solid #22b259;
+      border: 1px solid #22b259;
 
       &:focus,
       &:hover {
-        border: 2px solid rgba(#22b259, 0.5);
+        border: 1px solid rgba(#22b259, 0.5);
       }
     }
   }
