--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -2,10 +2,34 @@
   width: 560px;
   height: 242px;
   background-color: $color-resolution-blue;
-  display: flex;
-  gap: 28px;
-  padding: 57px 62px;
- margin: 0 auto;
+  padding: 57px 62px 10px;
+  margin: 0 auto;
+  overflow-y: auto;
+  display: grid;
+  grid-template-columns: 80px 1fr;
+  grid-template-rows: 0.1fr 1fr;
+  gap: 0px 28px;
+  grid-template-areas:
+    "img name"
+    "img text";
+
+  @include vp-1199 {
+    width: 566px;
+    padding-left: 64px;
+  }
+
+  @include vp-767 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 68px 1fr;
+    gap: 0px 0px;
+    grid-template-areas:
+      "img name"
+      "text text";
+    width: calc(100% - 64px);
+    height: 335px;
+    padding: 34px 25px;
+  }
 }
 
 .review__image {
@@ -13,23 +37,45 @@
   height: 80px;
   flex-shrink: 0;
   padding-top: 7px;
+  grid-area: img;
+
+  @include vp-767 {
+    width: 68px;
+    height: 68px;
+    justify-self: end;
+    margin-right: 4px;
+  }
 }
 
 .review__image img {
   border-radius: 50%;
 }
 
-.review__description {
-  color: $color-default-white;
-}
-
 .review__name {
+  color: $color-default-white;
   font-size: 20px;
   line-height: 30px;
   font-weight: 700;
+  grid-area: name;
+
+  @include vp-767 {
+    line-height: 26px;
+    align-self: center;
+    margin-top: 12px;
+    margin-left: 11px;
+    text-align: left;
+  }
 }
 
 .review__text {
+  color: $color-default-white;
   margin-top: 10px;
   line-height: 23px;
+  grid-area: text;
+
+  @include vp-767 {
+    text-align: center;
+    margin-top: 20px;
+    line-height: 22.4px;
+  }
 }
