--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,5 +1,14 @@
 .reviews {
   padding: 65px 0;
+
+  @include vp-1199 {
+    padding: 35px 0;
+    margin-top: 2px;
+  }
+
+  @include vp-767 {
+    padding: 7px 0;
+  }
 }
 
 .reviews h2 {
