--- a/source/sass/blocks/stocks-banner.scss
+++ b/source/sass/blocks/stocks-banner.scss
@@ -19,7 +19,7 @@
   justify-content: space-between;
 
   @include vp-767 {
-    max-width: 100%;
+    width: 100%;
     align-items: center;
   }
 }
