--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -9,6 +9,15 @@
 
 @font-face {
   font-style: normal;
+  font-weight: 800;
+  font-family: "Alumni Sans";
+
+  font-display: swap;
+  src: url("../fonts/AlumniSans-ExtraBold.woff2") format("woff2"), url("../fonts/AlumniSans-ExtraBold.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
   font-weight: 700;
   font-family: "Roboto Condensed";
 
