--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -21,6 +21,7 @@ $color-crimson:                     #d10a42;
 $color-torchred:                    #ed0233;
 $color-ghost-white:                 #f8f9fc;
 $color-whisper:                     #e8e8e8;
+$color-light-slate-grey:            #74819c;
 $color-dark-gray:                   #afafaf;
 $color-spindle:                     #b6bdcc;
 $color-gray:                        #787878;
