--- a/source/sass/blocks/contacts-contacts.scss
+++ b/source/sass/blocks/contacts-contacts.scss
@@ -1,12 +1,18 @@
 .contacts-contacts {
   justify-self: left;
+
+  @include vp-1199 {
+    justify-self: unset;
+  }
 }
 
 .contacts-contacts__container {
+  position: relative;
   max-width: 683px;
   text-align: left;
   padding-left: 122px;
   padding-top: 61px;
+  padding-bottom: 70px;
 
   &::before {
     content: '';
@@ -17,6 +23,15 @@
     width: 50vw;
     background: $color-light-slate-grey;
   }
+
+  @include vp-1199 {
+    max-width: 100%;
+    padding-left: 148px;
+  }
+
+  @include vp-767 {
+    padding-left: 15px;
+  }
 }
 
 .contacts-contacts__wrapper {
@@ -24,7 +39,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 12px 122px;
+  gap: 14px 123px;
   grid-template-areas:
     ". ."
     ". .";
@@ -36,21 +51,76 @@
     top: 6px;
     left: 50%;
     width: 1px;
-    height: 106px;
+    height: 103px;
     background-color: $color-light-slate-grey;
+
+    @include vp-1199 {
+      left: calc(50% - 59px);
+      height: 134px;
+    }
+
+    @include vp-767 {
+      display: none;
+    }
+  }
+
+  @include vp-1199 {
+    margin-top: 30px;
+    gap: 21px 0;
+    padding-right: 21px;
+  }
+
+  @include vp-767 {
+    display: flex;
+    flex-direction: column;
+    margin-top: 34px;
   }
 }
 
 .contacts-contacts__title {
   font-size: 16px;
-  font-weight: 700;
   line-height: 24px;
+  font-weight: 700;
   margin-bottom: 4px;
+
+  @include vp-1199 {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .contacts-contacts__text {
   font-size: 14px;
-  font-weight: 400;
   line-height: 21px;
+  font-weight: 400;
   font-style: normal;
+
+  @include vp-1199 {
+    font-size: 18px;
+    line-height: 27.42px;
+  }
+}
+
+.contacts-contacts__unit--first {
+  @include vp-767 {
+    order: 1;
+  }
+}
+
+.contacts-contacts__unit--second {
+  @include vp-767 {
+    order: 2;
+  }
+}
+
+.contacts-contacts__unit--third {
+  @include vp-767 {
+    order: 3;
+  }
+}
+
+.contacts-contacts__unit--fourth {
+  @include vp-767 {
+    order: 4;
+  }
 }
