--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -5,11 +5,16 @@
 .contacts__container {
   display: grid;
   grid-template-columns: 1fr 1fr;
+
+  @include vp-1199 {
+    grid-template-columns: 100vw;
+  }
 }
 
 .contacts__form-container {
   position: relative;
-  justify-self: right;
+  display: flex;
+  justify-content: flex-end;
   width: 100%;
 
   &::before {
@@ -26,6 +31,16 @@
 
 .contacts__form-wrapper {
   padding-left: 103px;
+
+  @include vp-1199 {
+    padding-left: 148px;
+    padding-right: 148px;
+  }
+
+  @include vp-767 {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .contacts__promo {
@@ -36,11 +51,36 @@
   line-height: 84.24px;
   font-weight: 800;
   letter-spacing: 1.62px;
+
+  @include vp-1199 {
+    font-size: 42px;
+    line-height: 50.4px;
+    letter-spacing: 1.2px;
+    margin-bottom: 15px;
+  }
+
+  @include vp-767 {
+    font-size: 32px;
+    line-height: 38.4px;
+    letter-spacing: 0.96px;
+    margin-bottom: 15px;
+    font-weight: 600;
+    margin-bottom: 26px;
+  }
 }
 
 .contacts__input {
   display: flex;
   gap: 30px;
+
+  @include vp-1199 {
+    gap: 57px;
+  }
+
+  @include vp-767 {
+    flex-direction: column;
+    gap: 0;
+  }
 }
 
 .contacts__form,
@@ -48,6 +88,11 @@
   max-width: 50%;
   flex-basis: 50%;
   position: relative;
+
+  @include vp-1199 {
+    max-width: 100%;
+  flex-basis: 100%;
+  }
 }
 
 .contacts__form {
@@ -56,34 +101,27 @@
   padding-right: 170px;
   padding-top: 56px;
   padding-bottom: 70px;
+
+  @include vp-1199 {
+    max-width: 100vw;
+    padding-right: 0;
+    padding-top: 61px;
+  }
+
+  @include vp-767 {
+    padding-top: 66px;
+  }
 }
 
 .contacts__btn {
   position: relative;
   width: 100%;
-  letter-spacing: 1.7px;
+  letter-spacing: 0.7px;
   padding: 16px 53px;
+  font-size: 14px;
+
+  @include vp-767 {
+    margin-top: 13px;
+    letter-spacing: 0.7px;
+  }
 }
-
-
-
-
-
-
-
-.card {
-  color: red;
-  position: relative;
-  padding: 56px 60px 70px;
-}
-
-.text {
-  margin: 0;
-  max-width: 410px;
-}
-
-.item.bordered .text {
-  margin-left: auto;
-}
-
-
