--- a/source/sass/blocks/custom-input.scss
+++ b/source/sass/blocks/custom-input.scss
@@ -5,8 +5,12 @@
   width: 530px;
   padding: 14px 0 28px;
 
+  @include vp-1199 {
+    padding: 14px 0 28px;
+  }
+
   @media screen and (max-width: 767px) {
-    padding: 4px 0 48px;
+    padding: 4px 0 25px;
     width: 100%;
   }
 
@@ -40,6 +44,10 @@
       transition: border 0.3s ease;
       background-color: transparent;
       color: $color-default-white;
+
+      @include vp-1199 {
+        padding-bottom: 6px;
+      }
 
       @media screen and (max-width: 767px) {
         max-width: unset;
