--- a/source/sass/blocks/swiper-container.scss
+++ b/source/sass/blocks/swiper-container.scss
@@ -18,6 +18,7 @@
   }
 
   .swiper-button-next {
+    right: -56px;
 
     @include vp-1199 {
       right: 0;
@@ -25,6 +26,7 @@
   }
 
   .swiper-button-prev {
+    left: -56px;
 
     @include vp-1199 {
       left: 0;
