--- a/source/sass/blocks/custom-input.scss
+++ b/source/sass/blocks/custom-input.scss
@@ -109,7 +109,7 @@
   .input-message {
     position: absolute;
     right: 0;
-    bottom: -5px;
+    bottom: 0;
 
     &.is-invalid {
       color: #ff0000;
