--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -51,6 +51,8 @@
 @import "blocks/swiper-container.scss";
 @import "blocks/contacts.scss";
 @import "blocks/contacts-contacts.scss";
+@import "blocks/footer.scss";
+@import "blocks/social.scss";
 
 // ---------------------------------
 
