--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,6 +1,14 @@
 .advantages {
   padding: 100px 0 140px 0;
   background-color: $color-ghost-white;
+
+  @include vp-1199 {
+    padding: 96px 0 89px 0;
+  }
+
+  @include vp-767 {
+    padding: 98px 0 9px 0;
+  }
 }
 
 .advantages .container {
