--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -3,11 +3,17 @@
   padding: 58px 0 140px 0;
 
   @include vp-1199 {
-    padding: 48px 0 140px 0;
+    padding: 48px 0 96px 0;
   }
 
   @include vp-767 {
-    padding: 10px 0 140px 0;
+    padding: 10px 0 34px 0;
+  }
+
+  .swiper-container {
+    @include vp-767 {
+      padding: 0 30px;
+    }
   }
 }
 
