--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,5 +1,13 @@
 .contacts {
-  margin-top: 120px;
+  margin-top: 55px;
+
+  @include vp-1199 {
+    margin-top: 69px;
+  }
+
+  @include vp-767 {
+    margin-top: 64px;
+  }
 }
 
 .contacts__container {
@@ -99,13 +107,14 @@
   max-width: 683px;
   text-align: left;
   padding-right: 170px;
-  padding-top: 56px;
-  padding-bottom: 70px;
+  padding-top: 57px;
+  padding-bottom: 62px;
 
   @include vp-1199 {
     max-width: 100vw;
     padding-right: 0;
     padding-top: 61px;
+    padding-bottom: 68px;
   }
 
   @include vp-767 {
