--- a/source/sass/blocks/slider-reviews.scss
+++ b/source/sass/blocks/slider-reviews.scss
@@ -19,6 +19,10 @@
     height: 32px;
     top: 130px;
 
+    @include vp-1199 {
+      top: 52%;
+    }
+
     @include vp-767 {
       width: 10px;
       height: 19px;
@@ -36,10 +40,10 @@
   }
 
   .swiper-button-prev {
-    left: -1px;
+    left: 10px;
   }
 
   .swiper-button-next {
-    right: 0px;
+    right: 10px;
   }
 }
