--- a/source/sass/blocks/swiper-container.scss
+++ b/source/sass/blocks/swiper-container.scss
@@ -1,19 +1,25 @@
 .swiper-container {
   position: relative;
-  padding: 0 60px;
+  padding: 0;
+
+  @include vp-1199 {
+    padding: 0 55px;
+  }
 
   .swiper-button-next,
   .swiper-button-prev {
     width: 16px;
     height: 32px;
+    top: 52%;
 
     @include vp-1199 {
-      top: 51%;
+      top: 53%;
     }
 
     @include vp-767 {
       width: 10px;
       height: 19px;
+      top: 55%;
     }
   }
 
