--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -107,6 +107,7 @@
   max-width: 683px;
   text-align: left;
   padding-right: 170px;
+  padding-left: calc(100% - 683px);
   padding-top: 57px;
   padding-bottom: 62px;
 
