--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: $color-black-russian;
-  padding: 42px 0;
+  padding: 41px 0 16px;
 
   @include vp-1199 {
     padding: 47px 0;
@@ -17,7 +17,9 @@ flex-direction: column;
 }
 
 .footer__nav {
-  margin-bottom: 19px;
+  @include vp-767 {
+    margin-bottom: 19px;
+  }
 }
 
 .footer__list {
