--- a/source/sass/blocks/contacts-contacts.scss
+++ b/source/sass/blocks/contacts-contacts.scss
@@ -1,5 +1,8 @@
 .contacts-contacts {
   justify-self: left;
+  max-width: 683px;
+  border-top: 1px $color-light-slate-grey solid;
+  padding-right: calc(100% - 683px);
 
   @include vp-1199 {
     justify-self: unset;
@@ -7,27 +10,18 @@
 }
 
 .contacts-contacts__container {
+  width: 100%;
   position: relative;
-  max-width: 683px;
   text-align: left;
-  padding-left: 122px;
   padding-top: 65px;
-  padding-bottom: 61px;
-
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 1px;
-    width: 50vw;
-    background: $color-light-slate-grey;
-  }
+  padding-bottom: 65px;
+  padding-left: 122px;
 
   @include vp-1199 {
     max-width: 100%;
     padding-left: 148px;
-    padding-top: 65px;
+    padding-top: 62px;
+    padding-bottom: 63px;
   }
 
   @include vp-767 {
@@ -67,7 +61,7 @@
   }
 
   @include vp-1199 {
-    margin-top: 30px;
+    margin-top: 35px;
     gap: 21px 0;
     padding-right: 21px;
   }
@@ -83,11 +77,15 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 700;
-  margin-bottom: 4px;
+  margin-bottom: 2px;
 
   @include vp-1199 {
     font-size: 20px;
     line-height: 30px;
+  }
+
+  @include vp-767 {
+    margin-bottom: 4px;
   }
 }
 
