--- a/source/sass/blocks/contacts-contacts.scss
+++ b/source/sass/blocks/contacts-contacts.scss
@@ -2,7 +2,6 @@
   justify-self: left;
   width: 100%;
   border-top: 1px $color-light-slate-grey solid;
-  padding-right: calc(100% - 683px);
 
   @include vp-1199 {
     justify-self: unset;
@@ -16,12 +15,14 @@
   padding-top: 65px;
   padding-bottom: 64px;
   padding-left: 122px;
+  padding-right: calc(100% - 683px);
 
   @include vp-1199 {
     max-width: 100%;
     padding-left: 148px;
     padding-top: 62px;
     padding-bottom: 63px;
+    padding-right: 45px;
   }
 
   @include vp-767 {
@@ -45,13 +46,17 @@
     content: '';
     position: absolute;
     top: 6px;
-    left: 232px;
+    left: 41.5%;
     width: 1px;
     height: 103px;
     background-color: $color-light-slate-grey;
 
+    @media (min-width: 1200px) and (max-width: 1250px) {
+      left: 45%;
+    }
+
     @include vp-1199 {
-      left: calc(50% - 59px);
+      left: calc(50% - 38px);
       height: 134px;
     }
 
@@ -61,8 +66,9 @@
   }
 
   @include vp-1199 {
+    grid-template-columns: 0.9fr 1fr;
     margin-top: 35px;
-    gap: 21px 0;
+    gap: 21px 67px;
     padding-right: 21px;
   }
 
