--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -15,6 +15,7 @@ $color-dark-cerulean:               #003d85;
 $color-egyptian-blue:               #103aae;
 $color-persian-blue:                #2e35ac;
 $color-resolution-blue:             #1c3374;
+$color-dark-cerulean:               #14367a;
 $color-black-russian:               #030a1a;
 $color-venetian-red:                #b80027;
 $color-crimson:                     #d10a42;
