--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -86,8 +86,8 @@
   font-size: 71px;
   line-height: 106.5px;
   font-weight: 700;
-  background: linear-gradient(to bottom right, #D10A42 5%, #0041CA 61%);
-  -webkit-background-clip: text;
+  background: linear-gradient(to bottom right, #d10a42 5%, #0041ca 61%);
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 
   @include vp-1199 {
