--- a/source/sass/blocks/play-video.scss
+++ b/source/sass/blocks/play-video.scss
@@ -7,12 +7,12 @@
 
   &::before {
     position: absolute;
-    content: '';
+    content: "";
     top: 0;
     left: 0;
     width: 364px;
     height: 228px;
-    background-color: #14367A;
+    background-color: $color-dark-cerulean;
     opacity: 0.5;
 
     @include vp-1199 {
