--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -1,6 +1,6 @@
 .stock {
   border: 7px solid transparent;
-  border-image: linear-gradient(to bottom right, #D10A42, #00359F);
+  border-image: linear-gradient(to bottom right, #d10a42, #00359f);
   border-image-slice: 1;
   display: flex;
   flex-direction: column;
@@ -26,7 +26,7 @@
   @include vp-1199 {
     margin-bottom: 50px;
   }
-  
+
   @include vp-767 {
     margin-bottom: 27px;
   }
