--- a/source/sass/blocks/stocks.scss
+++ b/source/sass/blocks/stocks.scss
@@ -2,6 +2,10 @@
   padding: 100px 0 55px;
 
   @include vp-1199 {
+    padding-top: 97px;
+  }
+
+  @include vp-767 {
     padding-top: 95px;
   }
 }
