--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -44,7 +44,7 @@
     margin-bottom: 33px;
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       bottom: 0;
       width: 345px;
