--- a/source/sass/blocks/ticket.scss
+++ b/source/sass/blocks/ticket.scss
@@ -5,7 +5,7 @@
 
   &:hover {
     border: 7px solid transparent;
-    border-image: linear-gradient(to bottom right, #D10A42, #00359F);
+    border-image: linear-gradient(to bottom right, #d10a42, #00359f);
     border-image-slice: 1;
 
     .btn--border-black {
@@ -27,6 +27,14 @@
 
 .ticket h3 {
   margin-bottom: 8px;
+
+  @include vp-1199 {
+    margin-bottom: 11px;
+  }
+
+  @include vp-767 {
+    margin-bottom: 8px;
+  }
 }
 
 .ticket__info {
@@ -40,4 +48,3 @@
     margin-bottom: 53px;
   }
 }
-
