--- a/source/sass/blocks/tickets.scss
+++ b/source/sass/blocks/tickets.scss
@@ -8,17 +8,17 @@
     position: absolute;
     bottom: -31px;
     right: 0;
-    content: '';
+    content: "";
     width: 287px;
     height: 413px;
-    background-image: url(./../img/pancakes.jpg);
+    background-image: url("./../img/pancakes.jpg");
 
     @include vp-1199 {
       bottom: -11px;
       right: 0;
       width: 347px;
       height: 370px;
-      background-image: url(./../img/pancakes-tablet.jpg);
+      background-image: url("./../img/pancakes-tablet.jpg");
     }
 
     @include vp-767 {
@@ -43,6 +43,7 @@
   @include vp-1199 {
     grid-template-columns: 1fr;
     justify-items: center;
+    gap: 35px;
   }
 
   @include vp-767 {
