--- a/source/sass/blocks/coach.scss
+++ b/source/sass/blocks/coach.scss
@@ -43,6 +43,10 @@
   height: 100%;
 }
 
+.coach__foto {
+  background-color: $color-light-slate-grey;
+}
+
 .coach__foto img {
   object-fit: cover;
   height: 100%;
