--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,7 +2,7 @@
   margin-top: 55px;
 
   @include vp-1199 {
-    margin-top: 69px;
+    margin-top: 67px;
   }
 
   @include vp-767 {
@@ -18,7 +18,6 @@
     grid-template-columns: 100%;
   }
 }
-
 
 .contacts__promo {
   position: relative;
@@ -55,7 +54,7 @@
   }
 
   @include vp-767 {
-    flex-direction: column;
+    grid-template-columns: 1fr;
     gap: 0;
   }
 }
@@ -74,25 +73,20 @@
   border-top: 1px solid $color-sapphire;
 
   @include vp-1199 {
-    padding: 61px 0 68px 0;
-    max-width: none;
+    border-top: none;
   }
 
   @include vp-767 {
-    padding-top: 66px;
+    padding-top: 5px;
   }
 }
 
 .contacts__form-wrapper {
   text-align: left;
-  padding-right: 170px;
-  padding-left: calc(100% - 580px);
-  padding-top: 57px;
-  padding-bottom: 62px;
+  padding: 57px 170px 62px calc(100% - 580px);
 
   @include vp-1199 {
-    padding-left: 148px;
-    padding-right: 148px;
+    padding: 61px 148px 68px 148px;
   }
 
   @include vp-767 {
