--- a/source/sass/blocks/hall.scss
+++ b/source/sass/blocks/hall.scss
@@ -10,12 +10,6 @@
   }
 }
 
-.hall .container {
-  @include vp-767 {
-    padding: 0;
-  }
-}
-
 .hall h2 {
   font-size: 48px;
 
@@ -31,14 +25,20 @@
 .hall__container {
   display: flex;
   gap: 72px;
+  width: 100%;
+  max-width: 1366px;
+  margin: 0 auto;
+  padding: 0 103px;
 
   @include vp-1199 {
+    padding: 0 45px;
     flex-direction: column;
     align-items: center;
     gap: 36px;
   }
 
   @include vp-767 {
+    padding: 0;
     gap: 26px;
   }
 }
