--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -11,9 +11,18 @@
   }
 }
 
-.advantages .container {
+.advantages__container {
+  width: 100%;
+  max-width: 1366px;
+  margin: 0 auto;
+  padding: 0 103px;
+
   @include vp-1199 {
     padding: 0;
+  }
+
+  @include vp-767 {
+    padding: 0 15px;
   }
 }
 
