--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: $color-black-russian;
-  padding: 41px 0 16px;
+  padding: 40px 0 18px;
 
   @include vp-1199 {
     padding: 47px 0;
@@ -18,7 +18,7 @@
 
 .footer__nav {
   @include vp-767 {
-    margin-bottom: 19px;
+    margin-bottom: 18px;
   }
 }
 
@@ -46,7 +46,7 @@
   }
 }
 
-.footer__logo {
+.footer__item--logo {
   margin-right: 237px;
 
   @include vp-1199 {
@@ -58,6 +58,18 @@
   @include vp-767 {
     margin-right: 0;
     margin-bottom: 25px;
+    width: 68px;
+    height: 15px;
+  }
+}
+
+.footer__logo {
+  @include vp-1199 {
+    width: 82px;
+    height: 18px;
+  }
+
+  @include vp-767 {
     width: 68px;
     height: 15px;
   }
