--- a/source/sass/blocks/swiper-container.scss
+++ b/source/sass/blocks/swiper-container.scss
@@ -6,36 +6,42 @@
     padding: 0 55px;
   }
 
-  .swiper-container__button-next,
-  .swiper-container__button-prev {
-    width: 16px;
-    height: 32px;
-    top: 52%;
-
-    @include vp-1199 {
-      top: 52%;
-    }
-
+  .swiper-container {
     @include vp-767 {
-      width: 10px;
-      height: 19px;
-      top: 54%;
+      padding: 0 30px;
     }
   }
+}
 
-  .swiper-container__button-next {
-    right: -56px;
+.swiper-container__button-next,
+.swiper-container__button-prev {
+  width: 16px;
+  height: 32px;
+  top: 52%;
 
-    @include vp-1199 {
-      right: 0;
-    }
+  @include vp-1199 {
+    top: 52%;
   }
 
-  .swiper-container__button-prev {
-    left: -56px;
+  @include vp-767 {
+    width: 10px;
+    height: 19px;
+    top: 54%;
+  }
+}
 
-    @include vp-1199 {
-      left: 0;
-    }
+.swiper-container__button-next {
+  right: -56px;
+
+  @include vp-1199 {
+    right: 0;
+  }
+}
+
+.swiper-container__button-prev {
+  left: -56px;
+
+  @include vp-1199 {
+    left: 0;
   }
 }
