--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,13 +1,13 @@
 .advantages {
-  padding: 100px 0 140px 0;
+  padding: 100px 0 140px;
   background-color: $color-ghost-white;
 
   @include vp-1199 {
-    padding: 96px 0 89px 0;
+    padding: 96px 0 89px;
   }
 
   @include vp-767 {
-    padding: 98px 0 9px 0;
+    padding: 100px 0 9px;
   }
 }
 
@@ -19,10 +19,6 @@
 
   @include vp-1199 {
     padding: 0;
-  }
-
-  @include vp-767 {
-    padding: 0 15px;
   }
 }
 
