--- a/source/sass/blocks/hall.scss
+++ b/source/sass/blocks/hall.scss
@@ -100,6 +100,10 @@
   }
 }
 
+.hall__img {
+  height: auto;
+}
+
 .hall__img img {
   object-fit: cover;
 
@@ -110,7 +114,7 @@
 
   @include vp-767 {
     width: 100vw;
-    height: 313px;
+    height: auto;
   }
 }
 
