--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -31,6 +31,23 @@
   }
 }
 
+.header-phone {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  margin-left: 41px;
+
+  @include vp-1199 {
+    margin-left: 0;
+  }
+
+  @include vp-767 {
+    display: grid;
+  }
+}
+
+
+
 .header__phone {
   font-family: $ff-title;
   color: $color-default-white;
@@ -38,12 +55,15 @@
   line-height: 31.2px;
   font-weight: 600;
   letter-spacing: 0.78px;
+  margin-left: 95px;
+
 
   @include vp-1199 {
     font-size: 24px;
     line-height: 28.8px;
     font-weight: 700;
     letter-spacing: 0.48px;
+    margin-left: 62px;
   }
 
   @include vp-767 {
