--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -28,6 +28,7 @@
   position: absolute;
   top: -55px;
   color: $color-whisper;
+  opacity: 0.48;
   font-size: 100px;
   line-height: 150px;
   font-weight: 700;
