--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -22,24 +22,25 @@
   background-color: $color-torchred;
   padding: 85px 79px 39px 86px;
   max-width: 500px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 0.5fr 0.5fr;
-  gap: 0 63px;
-  grid-template-areas:
-    "promo-title date"
-    "promo-subtitle promo-subtitle"
-    "btn btn";
 
   @include vp-1199 {
     max-width: 292px;
-    padding: 53px 50px 30px 50px;
-    gap: 0 35px;
+    padding: 53px 50px calc(100% - 643px) 50px;
   }
 
   @include vp-767 {
     max-width: 100%;
-    padding-bottom: 35px;
+    padding-bottom: 50px;
+  }
+}
+
+.promo__description-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 63px;
+
+  @include vp-1199 {
+    gap: 35px;
   }
 }
 
@@ -52,7 +53,6 @@
   color: $color-default-white;
   text-transform: uppercase;
   text-align: center;
-  grid-area: promo-title;
 
   @include vp-1199 {
     font-size: 48px;
@@ -62,7 +62,6 @@
 }
 
 .promo__date {
-  grid-area: date;
   display: flex;
   flex-direction: column;
   gap: 23px;
@@ -83,11 +82,13 @@
   font-weight: 400;
   grid-area: promo-subtitle;
   margin-left: -8px;
+  margin-top: 8px;
+  margin-bottom: 8px;
 
   @include vp-1199 {
     font-size: 12px;
     line-height: 18px;
-    margin-top: -5px;
+    margin-top: -1px;
     margin-left: -5px;
   }
 
@@ -98,9 +99,8 @@
 
 .promo__btn {
   width: 103%;
-  grid-area: btn;
   height: fit-content;
-  margin-top: -20px;
+  margin-top: 40px;
   margin-left: -10px;
   padding: 22px 53px;
 
@@ -109,13 +109,14 @@
     font-size: 10px;
     line-height: 11.72px;
     letter-spacing: 0.5px;
-    margin-top: -10px;
+    margin-top: 21px;
     margin-left: -6px;
+    width: 105%;
     border: 2px $color-default-white solid;
   }
 
   @include vp-767 {
-    margin-top: -5px;
+    margin-top: 22px;
   }
 }
 
