--- a/source/sass/blocks/slider-reviews.scss
+++ b/source/sass/blocks/slider-reviews.scss
@@ -1,6 +1,6 @@
 .slider-reviews {
   width: 693px;
-  height: 242px;
+  height: auto;
   margin-top: 38px;
 
   @include vp-1199 {
@@ -9,7 +9,6 @@
 
   @include vp-767 {
     width: 100%;
-    height: 335px;
     margin-top: 42px;
   }
 }
