--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -7,7 +7,6 @@
   justify-content: space-between;
   color: $color-resolution-blue;
   padding: 23px 35px 29px 28px;
-  height: 50%;
 
   @include vp-1199 {
     height: 100%;
@@ -52,6 +51,7 @@
   font-size: 12px;
   line-height: 14.06px;
   font-weight: 700;
+  margin-top: 71px;
 
   @include vp-1199 {
     margin-top: auto;
