--- a/source/sass/blocks/stocks-banner.scss
+++ b/source/sass/blocks/stocks-banner.scss
@@ -58,6 +58,7 @@
   max-width: fit-content;
   font-weight: 700;
   line-height: 16.41px;
+  margin-top: 20px;
 }
 
 .stocks-banner__image {
@@ -70,12 +71,4 @@
   height: 100%;
   width: 100%;
   object-fit: cover;
-
-  @include vp-1199 {
-    height: 462px;
-  }
-
-  @include vp-767 {
-    height: 299px;
-  }
 }
