--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 11px;
+  justify-self: end;
 
   @include vp-767 {
     max-width: 97px;
