--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -37,16 +37,18 @@
 
   &__controls {
     position: relative;
-    display: flex;
+    /*display: flex;
     justify-content: center;
-    gap: 4px;
+    gap: 4px;*/
     width: 100%;
+    margin: 0 auto;
     margin-bottom: 33px;
 
     &::before {
       content: "";
       position: absolute;
       bottom: 0;
+      left: calc(50% - 172px);
       width: 345px;
       height: 2px;
       background-color: $color-gray;
@@ -58,6 +60,7 @@
 
       @include vp-767 {
         width: 100%;
+        left: 0;
       }
     }
 
@@ -79,12 +82,16 @@
 
   &__control {
     cursor: pointer;
-    margin: 0 20px;
+    margin: 0 21px;
     padding-bottom: 12px;
     opacity: 0.5;
     background-color: transparent;
     border-bottom: 2px transparent solid;
     transition: border-bottom-color $trans-default;
+
+    @include vp-1199 {
+      margin: 0 25px;
+    }
 
     @media screen and (max-width: 767px) {
       margin: 0;
@@ -100,6 +107,7 @@
   &__content {
     margin-bottom: 40px;
     transition: height 0.3s;
+    text-align: center;
   }
 
   &__element {
