--- a/source/sass/blocks/tickets.scss
+++ b/source/sass/blocks/tickets.scss
@@ -2,7 +2,6 @@
   position: relative;
   background-color: $color-ghost-white;
   padding: 120px 0;
-  text-align: center;
 
   &::before {
     position: absolute;
@@ -33,6 +32,10 @@
   @include vp-767 {
     padding: 70px 0;
   }
+}
+
+.tickets h2 {
+  text-align: center;
 }
 
 .tickets__container {
