--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -1,6 +1,8 @@
 .tabs {
   max-width: 100%;
   margin-top: 25px;
+  display: flex;
+  flex-direction: column;
 
   @include vp-1199 {
     margin-top: 20px;
@@ -37,25 +39,23 @@
 
   &__controls {
     position: relative;
-    /*display: flex;
-    justify-content: center;
-    gap: 4px;*/
-    width: 100%;
     margin: 0 auto;
     margin-bottom: 33px;
+    align-self: center;
 
     &::before {
       content: "";
       position: absolute;
       bottom: 0;
-      left: calc(50% - 172px);
-      width: 345px;
+      left: 20px;
+      width: calc(100% - 30px);
       height: 2px;
       background-color: $color-gray;
       opacity: 0.2;
 
       @include vp-1199 {
-        width: 335px;
+        left: 25px;
+        width: calc(100% - 45px);
       }
 
       @include vp-767 {
@@ -70,8 +70,6 @@
     }
 
     @include vp-767 {
-      justify-content: space-between;
-      gap: 14px;
       margin-bottom: 9px;
     }
 
@@ -94,7 +92,13 @@
     }
 
     @media screen and (max-width: 767px) {
-      margin: 0;
+      margin: 0 39px 0 0;
+    }
+
+    &:nth-child(3n) {
+      @include vp-767 {
+        margin-right: 0;
+      }
     }
 
     &.is-active {
