--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -43,6 +43,19 @@
     margin-bottom: 33px;
     align-self: center;
 
+    @include vp-1199 {
+      gap: 14px;
+      margin-bottom: 38px;
+    }
+
+    @include vp-767 {
+      margin-bottom: 20px;
+    }
+
+    @media screen and (max-width: 767px) {
+      flex-wrap: wrap;
+    }
+
     &::before {
       content: "";
       position: absolute;
@@ -62,19 +75,6 @@
         width: 100%;
         left: 0;
       }
-    }
-
-    @include vp-1199 {
-      gap: 14px;
-      margin-bottom: 38px;
-    }
-
-    @include vp-767 {
-      margin-bottom: 9px;
-    }
-
-    @media screen and (max-width: 767px) {
-      flex-wrap: wrap;
     }
   }
 
@@ -103,7 +103,7 @@
 
     &.is-active {
       opacity: 1;
-      pointer-events: none;
+      pointer-events: auto;
       border-color: $color-crimson;
     }
   }
