--- a/source/sass/blocks/ticket.scss
+++ b/source/sass/blocks/ticket.scss
@@ -21,15 +21,7 @@
 
   @include vp-767 {
     width: 100%;
-    padding: 55px 34px;
-  }
-
-  &:nth-child(2n) {
-    @include vp-767 {
-      padding-top: 43px;
-      padding-bottom: 47px;
-      margin-bottom: -3px;
-    }
+    padding: 43px 34px 50px;
   }
 }
 
