--- a/source/sass/blocks/tickets.scss
+++ b/source/sass/blocks/tickets.scss
@@ -3,6 +3,14 @@
   background-color: $color-ghost-white;
   padding: 120px 0;
 
+  @include vp-1199 {
+    padding: 100px 0;
+  }
+
+  @include vp-767 {
+    padding: 70px 0 75px;
+  }
+
   &::before {
     position: absolute;
     bottom: -31px;
@@ -24,14 +32,6 @@
       display: none;
     }
   }
-
-  @include vp-1199 {
-    padding: 100px 0;
-  }
-
-  @include vp-767 {
-    padding: 70px 0;
-  }
 }
 
 .tickets h2 {
@@ -50,7 +50,7 @@
   }
 
   @include vp-767 {
-    gap: 29px;
+    gap: 35px;
   }
 }
 
