--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -1,5 +1,6 @@
 .review {
   width: 560px;
+  height: 100%;
   background-color: $color-resolution-blue;
   padding: 57px 62px 55px;
   margin: 0 auto;
